--- a/scripts/basic/Makefile
+++ b/scripts/basic/Makefile
@@ -11,5 +11,16 @@
 hostprogs-y	:= fixdep
 always		:= $(hostprogs-y)
 
+ifneq ($(CROSS_COMPILE),)
+TGTPRE		:= $(notdir $(CROSS_COMPILE))
+tgtfixdep	:= $(TGTPRE)fixdep
+
+always += $(tgtfixdep)
+
+$(obj)/$(tgtfixdep) : $(src)/fixdep.c
+	$(Q)$(CC) $(TGT_EXTRACFLAGS) $(CFLAGS) -o $@ $<
+endif
+
 # fixdep is needed to compile other host programs
 $(addprefix $(obj)/,$(filter-out fixdep,$(always))): $(obj)/fixdep
+
