--- a/scripts/package/Makefile
+++ b/scripts/package/Makefile
@@ -101,6 +101,11 @@ tar%pkg: FORCE
 
 clean-dirs += $(objtree)/tar-install/
 
+ni-pkg: FORCE
+	$(MAKE)
+	$(CONFIG_SHELL) $(srctree)/scripts/package/buildnipkg
+
+clean-dirs += $(objtree)/ni-install
 
 # perf-pkg - generate a source tarball with perf source
 # ---------------------------------------------------------------------------
@@ -132,7 +137,8 @@ perf-%pkg: FORCE
 help: FORCE
 	@echo '  rpm-pkg             - Build both source and binary RPM kernel packages'
 	@echo '  binrpm-pkg          - Build only the binary kernel package'
-	@echo '  deb-pkg             - Build the kernel as a deb package'
+	@echo '  deb-pkg             - Build the kernel as an deb package'
+	@echo '  ni-pkg              - Build the kernel and needed files for National Instruments targets'
 	@echo '  tar-pkg             - Build the kernel as an uncompressed tarball'
 	@echo '  targz-pkg           - Build the kernel as a gzip compressed tarball'
 	@echo '  tarbz2-pkg          - Build the kernel as a bzip2 compressed tarball'
