--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -233,6 +233,10 @@ config X86
 	select VIRT_TO_BUS
 	select X86_FEATURE_NAMES		if PROC_FS
 	select PROC_PID_ARCH_STATUS		if PROC_FS
+	select NI_COLD_BOOT_SUPPORT
+
+config NI_COLD_BOOT_SUPPORT
+	def_bool n
 
 config INSTRUCTION_DECODER
 	def_bool y
