--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -468,6 +468,7 @@ config PVPANIC
 config NI_RT_FEATURES
 	bool "NI 903x/913x support"
 	depends on X86 && ACPI
+	select REGULATOR
 	help
 	  This driver exposes LEDs and other features of NI 903x/913x Real-Time
 	  controllers.
