--- a/arch/x86/configs/nati_x86_64_defconfig
+++ b/arch/x86/configs/nati_x86_64_defconfig
@@ -4,12 +4,11 @@ CONFIG_AUDIT=y
 # CONFIG_CONTEXT_TRACKING_FORCE is not set
 CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_CLOCKSOURCE_WATCHDOG is not set
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT=y
 CONFIG_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_RCU_EXPERT=y
-CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -64,8 +63,8 @@ CONFIG_EDD=y
 CONFIG_EDD_OFF=y
 CONFIG_DMI_SYSFS=m
 CONFIG_EFI_VARS=y
+CONFIG_EFI_RUNTIME=y
 # CONFIG_VIRTUALIZATION is not set
-CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
